# libpeios

./: .gitignore  Cargo.toml  build.rs  cbindgen.toml  peios.pc.in  pekit.toml
abi/: README.md  peios-abi.h
docs/: design-notes.md  kacs-abi-reference.md  security-impl-map.md
include/: peios.h
include/peios/: access.h  event.h  file.h  msgpack.h  process.h  registry.h  security.h  token.h
packages.pekit/: libpeios-debuginfo.package.pekit.toml  libpeios-debugsource.package.pekit.toml  libpeios-devel.package.pekit.toml  libpeios-static.package.pekit.toml  libpeios.package.pekit.toml  package.pekit.toml
src/: access.rs  error.rs  file.rs  lib.rs  msgpack.rs  process.rs
src/event/: consume.rs  emit.rs  mod.rs
src/registry/: backup.rs  key.rs  mod.rs  security.rs  transaction.rs  value.rs
src/security/: acl_builder.rs  mapping.rs  mod.rs  sd_builder.rs  sddl_ffi.rs  sid.rs  view.rs
src/security/sddl/: abi.rs  build.rs  claims.rs  codec.rs  condition.rs  inherit.rs  mod.rs  wellknown.rs  wire_sid.rs
src/security/sddl/grammar/: cond.rs  mod.rs  tests.rs  vocab.rs
src/token/: actions.rs  builder.rs  mod.rs  ops.rs  query.rs
tools/: verify-abi.sh
